<resources>
    <string name="app_name">易治</string>
    <string name="action_settings">Settings</string>
    <string name="company">healthcareworks</string>
    <string name="empty_info">暂时没有相关信息</string>
    <string name="load_empty">暂时没有相关信息</string>
    <string name="Load_fail">加载失败</string>
    <string name="button_save">保存</string>
    <string name="button_edit">编辑</string>
    <string name="button_delete">删除</string>
    <string name="content_hint_text">您可以输入相关信息，以便后续查阅</string>
    <string name="sendVertifyCode">发送验证码</string>
    <string name="application">Application</string>
    <string name="login_rigister">登录/注册</string>
    <string name="phoneNumer">手机号</string>
    <string name="getVertifyCode">获取验证码</string>
    <string name="jump">跳过</string>
    <string name="pleaseInputYourPhoneNumer">请输入您的手机号</string>
    <string name="load_no_net">网络连接不顺畅~\n点击屏幕刷新</string>
    <string name="load_no_data">暂时没有相关信息~</string>
    <string name="load_no_search">没有搜索结果~</string>
    <string name="load_ing">正在拼命加载···</string>
    <string name="cancel">取消</string>
    <string name="default_string">文本</string>
    <string name="default_title">标题</string>
    <string name="itoolKits">工具箱</string>
    <string name="treasureChest">百宝箱</string>
    <string name="news">新闻资讯</string>
    <string name="all">全部</string>
    <string name="collection">收藏</string>
    <string name="allDrugs">全部药品</string>
    <string name="drugBrand">品牌专区</string>
    <string name="drugCollect">药品收藏</string>
    <string name="baike">百科</string>
    <string name="doctor">医生</string>
    <string name="hospital">医院</string>
    <string name="drug">药品</string>
    <string name="indicators">指标</string>
    <string name="tips">小贴士</string>
    <string name="developing">开发中</string>
    <string name="knowTumer">认识肿瘤</string>
    <string name="treament">治疗方法</string>
    <string name="inspection">检查项目</string>
    <string name="nounExplaning">名词解释</string>
    <string name="huayandan">化验单</string>
    <string name="indicatorexplain">指标解释</string>
    <string name="introduce">介绍</string>
    <string name="goodat">专长</string>
    <string name="operation">手术</string>
    <string name="recommended_degree">推荐度</string>
    <string name="compre_recomm_degree">综合推荐度</string>
    <string name="choose_goodat">选择专长</string>
    <string name="overview">简介</string>
    <string name="common_cause">常见病因</string>
    <string name="advice">建议</string>
    <string name="screening">筛选</string>
    <string name="medical_case">案例</string>
    <string name="visits">出诊</string>
    <string name="tumer_type">肿瘤类型</string>
    <string name="treat_city">治疗城市</string>
    <string name="treat_area">治疗城区</string>
    <string name="hospital_level">医院等级</string>
    <string name="doctor_level">医生级别</string>
    <string name="please_choose_tumer_type">请选择肿瘤类型</string>
    <string name="please_choose_treat_city">请选择治疗城市</string>
    <string name="please_choose_treat_area">请选择治疗城区</string>
    <string name="please_choose_hospital_level">请选择医院等级</string>
    <string name="please_choose_doctor_level">请选择医生级别</string>
    <string name="please_choose_doctor_operation">选择是否可手术</string>
    <string name="doctor_whether_can_operation">是否可手术</string>
    <string name="doctor_can_operation">医生可以手术</string>
    <string name="doctor_cannot_operation">医生不可以手术</string>
    <string name="lesion_location">病变位置</string>
    <string name="diagnosis_method">确诊手段</string>
    <string name="installment_explain">分期解释</string>
    <string name="name">名称</string>
    <string name="advantage">优势</string>
    <string name="disadvantage">劣势</string>
    <string name="prepare">准备期</string>
    <string name="operateDuring">手术期</string>
    <string name="operate">操作期</string>
    <string name="interval">间隔期</string>
    <string name="convalescence">康复期</string>
    <string name="costEstimates">费用预估</string>
    <string name="nounIntroduction">名词简介</string>
    <string name="determinContent">测定内容</string>
    <string name="testCycle">化验周期</string>
    <string name="miseryIndex">痛苦指数</string>
    <string name="checkIntro">@string/nounIntroduction</string>
    <string name="checkCycle">检查周期</string>
    <string name="supplierInfo">厂商信息</string>
    <string name="chemicalName">化学名称</string>
    <string name="adaptionDiease">适应症</string>
    <string name="usage">用法用量</string>
    <string name="taboo">禁忌</string>
    <string name="otherSameTypeDrug">其他同类型药品</string>
    <string name="unAnswer">该问题还未回答，您可以直接致电药厂了解详情。</string>
    <string name="diseasePosition">病变位置</string>
    <string name="dominantCharacter">显性特征</string>
    <string name="diagnosisMethod">确诊手段</string>
    <string name="installmentExplain">分期解释</string>
    <string name="basicInfo">基本信息</string>
    <string name="drugLists">药品列表</string>
    <string name="company_name">公司名称</string>
    <string name="company_description">公司描述</string>
    <string name="company_location">总部地点</string>
    <string name="build_time">成立时间</string>
    <string name="business_scope">经营范围</string>
    <string name="company_nature">公司性质</string>
    <string name="company_slogan">公司口号</string>
    <string name="founding_company">创始公司</string>
    <string name="create_time">发布日期：</string>
    <string name="testCon">我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测试</string>
    <string name="testCon1">我是我是测试</string>
    <string name="testCon2">我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测试我是测试</string>
    <string name="last_update_time">上次更新时间: </string>
    <string name="KEY_TAG_FREEZEABLE">KEY_TAG_FREEZEABLE</string>
    <string name="pull_down_for_refresh">下拉刷新</string>
    <string name="release_for_refresh">松开刷新</string>
    <string name="refreshing">正在刷新&#8230;</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string-array name="passwordTypeArr">
        <item>numberPassword</item>
        <item>textPassword</item>
        <item>textVisiblePassword</item>
        <item>textWebPassword</item>
    </string-array>
    <string-array name="menusName"> 
        <item>百科</item>
        <item>医生</item>
        <item>医院</item>
        <item>药品</item>
        <item>指标</item>
        <item>小贴士</item>
        <item>开发中</item>
    </string-array>
    <string-array name="menusName1"> 
        <item>医生查询</item>
        <item>医院查询</item>
        <item>费用预估</item>
        <item>检查项目</item>
        <item>指标解读</item>
        <item>治疗方法</item>
        <item>药品指南</item>
        <item>认识肿瘤</item>
        <item>名词解释</item>
        <item>小贴士</item>
    </string-array>
    <string-array name="menusName2"> 
        <item>医生查询</item>
        <item>医院查询</item>
        <item>检查项目</item>
        <item>指标解读</item>
        <item>治疗方法</item>
        <item>药品指南</item>
        <item>认识肿瘤</item>
        <item>名词解释</item>
        <item>小贴士</item>
    </string-array>
    <string-array name="baike_menu"> 
        <item>认识肿瘤</item>
        <item>治疗方法</item>
        <item>检查项目</item>
        <item>名词解释</item>
    </string-array>
    <string-array name="hosp_level">
        <item>全部</item>
        <item>一级</item>
        <item>一级甲等</item>
        <item>二级</item>
        <item>二级甲等</item>
        <item>三级</item>
        <item>三级甲等</item>
    </string-array>
    <string-array name="doct_level">  
        <item>全部</item>
        <item>主任医师</item>
        <item>副主任医师</item>
    </string-array>
    <string-array name="doct_operation"> 
        <item>全部</item>
        <item>可手术</item>
        <item>不可手术</item>
    </string-array>
    <string name="read_more">展开</string>
    <string name="read_less">收起</string>
    <string name="expand">展开</string>
    <string name="shrink">收起</string>
    <string name="qv_add">+</string>
    <string name="qv_remove">-</string>
</resources>