<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px_40"
            android:layout_marginRight="@dimen/px_40"
            android:layout_marginTop="@dimen/px_20"
            android:layout_marginBottom="@dimen/px_20"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:textColor="@color/main_color"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvCompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px_10"
                android:text=""
                android:textColor="@color/little_black"
                android:singleLine="false"
                android:lineSpacingExtra="@dimen/px_5" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_0.5"
            android:background="@color/gray_c4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px_40"
            android:layout_marginRight="@dimen/px_40"
            android:layout_marginTop="@dimen/px_20"
            android:layout_marginBottom="@dimen/px_20"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_location"
                android:textColor="@color/main_color"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvCompanyLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px_10"
                android:text=""
                android:textColor="@color/little_black"
                android:singleLine="false"
                android:lineSpacingExtra="@dimen/px_5" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_0.5"
            android:background="@color/gray_c4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px_40"
            android:layout_marginRight="@dimen/px_40"
            android:layout_marginTop="@dimen/px_20"
            android:layout_marginBottom="@dimen/px_20"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/build_time"
                android:textColor="@color/main_color"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvBuildTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px_10"
                android:text=""
                android:textColor="@color/little_black"
                android:singleLine="false"
                android:lineSpacingExtra="@dimen/px_5" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_0.5"
            android:background="@color/gray_c4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px_40"
            android:layout_marginRight="@dimen/px_40"
            android:layout_marginTop="@dimen/px_20"
            android:layout_marginBottom="@dimen/px_20"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/business_scope"
                android:textColor="@color/main_color"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvBusinessScope"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px_10"
                android:text=""
                android:textColor="@color/little_black"
                android:singleLine="false"
                android:lineSpacingExtra="@dimen/px_5" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_0.5"
            android:background="@color/gray_c4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px_40"
            android:layout_marginRight="@dimen/px_40"
            android:layout_marginTop="@dimen/px_20"
            android:layout_marginBottom="@dimen/px_20"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_nature"
                android:textColor="@color/main_color"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvCompanyNature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px_10"
                android:text=""
                android:textColor="@color/little_black"
                android:singleLine="false"
                android:lineSpacingExtra="@dimen/px_5" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_0.5"
            android:background="@color/gray_c4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px_40"
            android:layout_marginRight="@dimen/px_40"
            android:layout_marginTop="@dimen/px_20"
            android:layout_marginBottom="@dimen/px_20"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_slogan"
                android:textColor="@color/main_color"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvCompanySlogan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px_10"
                android:text=""
                android:textColor="@color/little_black"
                android:singleLine="false"
                android:lineSpacingExtra="@dimen/px_5" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_0.5"
            android:background="@color/gray_c4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px_40"
            android:layout_marginRight="@dimen/px_40"
            android:layout_marginTop="@dimen/px_20"
            android:layout_marginBottom="@dimen/px_20"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/founding_company"
                android:textColor="@color/main_color"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvFoundingCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px_10"
                android:text=""
                android:textColor="@color/little_black"
                android:singleLine="false"
                android:lineSpacingExtra="@dimen/px_5" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
